# x3f

./: .gitignore  CLAUDE.md  CMakeLists.txt  Info.plist.in
.github/workflows/: main.yml
doc/: changes.txt  readme.txt
features/: consistency.feature
features/steps/: consistency.py
src/: x3f_denoise.cpp  x3f_denoise.h  x3f_denoise_aniso.cpp  x3f_denoise_aniso.h  x3f_denoise_utils.cpp  x3f_denoise_utils.h  x3f_dngtags.c  x3f_dngtags.h  x3f_dump.c  x3f_dump.h  x3f_extract.c  x3f_histogram.c  x3f_histogram.h  x3f_image.c  x3f_image.h  x3f_io.c  x3f_io.h  x3f_io_test.c  x3f_matrix.c  x3f_matrix_test.c  x3f_meta.c  x3f_meta.h  x3f_output_dng.c  x3f_output_dng.h  x3f_output_ppm.c  x3f_output_ppm.h  x3f_output_tiff.c  x3f_output_tiff.h  x3f_print_meta.c  x3f_print_meta.h  x3f_printf.c  x3f_printf.h  x3f_process.c  x3f_process.h  x3f_spatial_gain.c  x3f_spatial_gain.h
